--- a/src/appConfig.properties
+++ b/src/appConfig.properties
@@ -1,4 +1,4 @@
 # DB_FULLPATH, indicar el jdbc + ruta + nombre de la base de datos 
-DB_FULLPATH=jdbc:sqlite:data\\TinderPet.db
+DB_FULLPATH=jdbc:sqlite:data\\DBAerolineaG3.db
 look_and_feel=obscuro
 developer : pepeLucho
