base de datos y obtención de datos

--- a/src/appConfig.properties
+++ b/src/appConfig.properties
@@ -1,4 +1,3 @@
-# DB_FULLPATH, indicar el jdbc + ruta + nombre de la base de datos 
-DB_FULLPATH=jdbc:sqlite:data\\TinderPet.db
-look_and_feel=obscuro
-developer : pepeLucho
+DB_NAME=DBAerolineaG1.db
+DB_PATH=data
+url_DataBase=jdbc:sqlite:data\\DBAerolineaG1.db
